--- a/Clase 2/Ejercicio Nro 11/Ejercicio Nro 11.csproj
+++ b/Clase 2/Ejercicio Nro 11/Ejercicio Nro 11.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{540C6450-E688-4055-B9C8-0569EECB5E47}</ProjectGuid>
+    <ProjectGuid>{486D709C-746F-4F26-9908-32BA15EECFAC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Ejercicio_Nro_11</RootNamespace>
-    <AssemblyName>Ejercicio_Nro_11</AssemblyName>
+    <AssemblyName>Ejercicio Nro 11</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validacion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
