--- a/Clase 6/Login/Login.csproj
+++ b/Clase 6/Login/Login.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{47240FE6-1651-46E6-80D3-3B5A3F9D3A00}</ProjectGuid>
+    <ProjectGuid>{EF9CCA3B-6FC1-4133-A934-1AE9AEE06605}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Clase_6</RootNamespace>
-    <AssemblyName>Clase 6</AssemblyName>
+    <RootNamespace>Login</RootNamespace>
+    <AssemblyName>Login</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,9 +31,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,28 +51,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmOwner.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmOwner.Designer.cs">
-      <DependentUpon>FrmOwner.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrmPantalla2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmPantalla2.Designer.cs">
-      <DependentUpon>FrmPantalla2.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmOwner.resx">
-      <DependentUpon>FrmOwner.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmPantalla2.resx">
-      <DependentUpon>FrmPantalla2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
