--- a/Clase 2/Ejercicio Nro 13/Ejercicio Nro 13.csproj
+++ b/Clase 2/Ejercicio Nro 13/Ejercicio Nro 13.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conversor.cs" />
+    <Compile Include="NumeroBinario.cs" />
+    <Compile Include="NumeroDecimal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
