--- a/Clase 6/Ejercicio Nro 24/Conversor Temperatura/Conversor Temperatura.csproj
+++ b/Clase 6/Ejercicio Nro 24/Conversor Temperatura/Conversor Temperatura.csproj
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D01A580-F0E7-4539-A48B-1D6BCADFA593}</ProjectGuid>
+    <ProjectGuid>{576D39D5-4822-48D6-8E44-607D6EB0917B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Conversor_Dinero</RootNamespace>
-    <AssemblyName>Conversor Dinero</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Conversor_Temperatura</RootNamespace>
+    <AssemblyName>Conversor Temperatura</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
@@ -79,10 +80,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Moneda\Moneda.csproj">
-      <Project>{23dacda5-8491-4387-b72f-07388fce1042}</Project>
-      <Name>Moneda</Name>
+    <ProjectReference Include="..\Temperatura\Temperatura.csproj">
+      <Project>{7c9f2aa3-2c16-46fe-b536-b5b384630fcc}</Project>
+      <Name>Temperatura</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
