--- a/Clase 7/EjercicioNro27/Listas/Listas.csproj
+++ b/Clase 7/EjercicioNro27/Listas/Listas.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EA829E96-3792-43F1-A66B-6038DF2D4C05}</ProjectGuid>
+    <ProjectGuid>{89122983-482A-4FDA-AF2A-BB451FE0ECA5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ejercicio_Nro_27</RootNamespace>
-    <AssemblyName>Ejercicio Nro 27</AssemblyName>
+    <RootNamespace>Listas</RootNamespace>
+    <AssemblyName>Listas</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
